[package]
name = "MinkaFX"
version = "0.1.0"
edition = "2021"
description = "wgpu overlay process for MinkaDE: snap preview + OSDs"

[[bin]]
name = "MinkaFX"
path = "src/main.rs"

[dependencies]
MinkaIPC = { path = "../MinkaIPC" }
calloop = "0.14"
calloop-wayland-source = "0.4"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wgpu = "26"
raw-window-handle = "0.6"
pollster = "0.4"
serde_json = "1"

[profile.release]
lto = "thin"
